workshop04/fortune.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: fortune-deployment
  namespace: weatherns
  labels:
    app: fortune
    version: v1

spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune-pod
      version: v1
  template:
    metadata:
      name: fortune-pod
      labels: 
        app: fortune-pod
        version: v1
    spec:
      containers:
      - name: fortune
        image: stackupiss/fortune:v1
        imagePullPolicy: Always
        ports:
        - name: fortune-port
          containerPort: 3000

---
#FQDN -> mydb-svc.myns.svc.cluster.local
kind: Service
apiVersion: v1

metadata:
  name: fortune-svc
  namespace: weatherns
  labels:
    app: fortune

spec:
  type: ClusterIP
  selector: 
    app: fortune-pod
  ports:
  - name: fortune-svc-port
    port: 3000
    targetPort: fortune-port
