workshop04/myweather.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: weatherns
  labels:
    app: weather-app

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: weather-deploy
  namespace: weatherns
  labels:
    app: weather-app
    version: v1

spec:
  replicas: 2
  selector:
    matchLabels:
      name: weather-pod
  template:
    metadata:
      name: weather-pod
      labels: 
        app: weather-app
        name: weather-pod
    spec:
      containers:
      - name: weather
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
        - name: weather-port
          containerPort: 3000
        readinessProbe:
          httpGet: 
            path: /ready
            port: weather-port
          periodSeconds: 60
        livenessProbe:
          httpGet: 
            path: /health
            port: weather-port
          periodSeconds: 60
        resources:
          requests:
            cpu: 100m
            memory: 16M
          limits:
#            cpu: 150m
            memory: 128M
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

---
#FQDN -> mydb-svc.myns.svc.cluster.local
kind: Service
apiVersion: v1

metadata:
  name: weather-svc
  namespace: weatherns
  labels:
    app: weather-app

spec:
  type: ClusterIP
  selector: 
    name: weather-pod
  ports:
  - name: weather-port # optional
    port: 3000
    targetPort: weather-port

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: weather-ing
  namespace: weatherns
  labels:
    app: weather-app
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2 # use here
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
#  backend:
#    serviceName: mywtapp-svc
#    servicePort: 80
  rules:

  - host: weather.nyl162.tk
    http: 
      paths:
      - path: /
        backend:
          serviceName: weather-svc
          servicePort: weather-port
